--- a/INST377Final-style.css
+++ b/INST377Final-style.css
@@ -154,3 +154,27 @@
   box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2), 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
   outline: 0;
 }
+
+
+
+/* HELP PAGE */
+.simple-slider {
+  position: relative;
+  width: 80%;
+  max-width: 600px;
+  margin: 40px auto;
+  text-align: center;
+}
+
+.simple-slider h3 {
+  margin-bottom: 10px;
+  font-size: 1.2rem;
+}
+
+.simple-slider img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
