--- a/INST377Final-style.css
+++ b/INST377Final-style.css
@@ -158,23 +158,35 @@
 
 
 /* HELP PAGE */
-.simple-slider {
+ .simple-slider {
   position: relative;
   width: 80%;
   max-width: 600px;
-  margin: 40px auto;
-  text-align: center;
+  margin: 0 auto;
+  overflow: hidden;
+  min-height: 350px; /* prevent collapsing */
 }
 
-.simple-slider h3 {
-  margin-bottom: 10px;
-  font-size: 1.2rem;
+.simple-slider > div {
+  width: 100%;
+  height: 100%;
+  text-align: center;
 }
 
 .simple-slider img {
   width: 100%;
-  max-height: 300px;
-  object-fit: cover;
-  border-radius: 8px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  border-radius: 10px;
+}
+
+.simple-slider figure {
+  margin: 0;
+}
+
+.simple-slider figcaption {
+  margin-top: 10px;
+  font-size: 1rem;
 }
 
