--- a/INST377Final-style.css
+++ b/INST377Final-style.css
@@ -164,12 +164,16 @@
   max-width: 600px;
   margin: 0 auto;
   overflow: hidden;
-  min-height: 350px; /* prevent collapsing */
+  /* min-height: 350px; prevent collapsing */
+  min-height: 550px;
 }
 
 .simple-slider > div {
   width: 100%;
-  height: 100%;
+  position: relative;
+  display: flex;   
+  /* height: 100%; */
+  flex-direction: column;
   text-align: center;
 }
 
@@ -183,10 +187,48 @@
 
 .simple-slider figure {
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .simple-slider figcaption {
   margin-top: 10px;
   font-size: 1rem;
+  position: relative;  /* required for z-index to work */
+  z-index: 2; 
+  
 }
+
+.button-34 {
+  background: #5E5DF0;
+  border-radius: 999px;
+  box-shadow: #5E5DF0 0 10px 20px -10px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  opacity: 1;
+  outline: 0 solid transparent;
+  padding: 8px 18px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: fit-content;
+  word-break: break-word;
+  border: 0;
+}
+
+
+
+.carousel-controls {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
 
