--- a/INST377Final-style.css
+++ b/INST377Final-style.css
@@ -232,3 +232,23 @@
 }
 
 
+
+/* SUBSTITUTE PAGE */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 1em;
+}
+
+th, td {
+  border: 1px solid #ccc;
+  padding: 0.5em;
+  text-align: left;
+}
+
+th {
+  background-color: #f5f5f5;
+}
+
+
+
