--- a/INST377Final-style.css
+++ b/INST377Final-style.css
@@ -103,12 +103,13 @@
   
   .creators figure {
     text-align: center;
-    max-width: 200px;
+    max-width: 250px;
+    max-height: 250px;
   }
   
   .creators img {
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
   }
